--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--<html ng-app="myApp">-->
 <html ng-app="campaignFinanceApp">
     <head>
-        <base href="/">
+        <base href="/disclosure-frontend-alpha/">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, maximum-scale=1.0">
         <meta name="fragment" content="!">
