--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="{{pageDescription}}">
 
         <!--<link href="/vendor.css" rel="stylesheet">-->
-        <link href="/app.css" rel="stylesheet">
+        <link href="app.css" rel="stylesheet">
     </head>
 
     <!--<body ng-class="bodyClasses" ng-controller="MainCtrl">-->
@@ -19,8 +19,8 @@
 
 			<campaign-finance-app></campaign-finance-app>
 
-			<script src="/vendor.js"></script>
-			<script src="/bundle.js"></script>
+			<script src="vendor.js"></script>
+			<script src="bundle.js"></script>
 
     </body>
 
